# hcgames

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mise.toml
.claude/skills/analyze-algo-performance/: SKILL.md
.githooks/: pre-commit
.github/workflows/: check.yml  deploy.yml
.mise/tasks/: generate_game_html.py  generate_hotel_svg.py  generate_index.py
games/arrow-blocks/: Cargo.toml  Trunk.toml  index.html
games/arrow-blocks/src/: game.rs  main.rs  puzzle.rs
games/game2048/: Cargo.toml  Trunk.toml  index.html
games/game2048/src/: lib.rs  main.rs
games/klondike/: Cargo.toml  Trunk.toml  index.html
games/klondike/src/: game.rs  main.rs  solver.rs
games/minesweeper/: Cargo.toml
games/minesweeper-hex/: Cargo.toml  Trunk.toml  index.html
games/minesweeper-hex/src/: main.rs
games/minesweeper-square/: Cargo.toml  Trunk.toml  index.html
games/minesweeper-square/src/: main.rs
games/minesweeper/src/: main.rs
games/snake/: CLAUDE.md  Cargo.toml  Trunk.toml  index.html
games/snake/src/: blocks.rs  game.rs  main.rs
games/spider/: Cargo.toml
games/spider/src/: game.rs  main.rs  solver.rs
games/sudoku/: Cargo.toml
games/sudoku/src/: game.rs  main.rs  solver.rs
lib/beam_solver/: Cargo.toml
lib/beam_solver/src/: lib.rs
lib/cards/: Cargo.toml
lib/cards/src/: card.rs  lib.rs  render.rs
lib/control/: Cargo.toml
lib/minesweeper/: Cargo.toml
lib/screenshot/: Cargo.toml
static/: robots.txt
static/2048/: index.html
static/minesweeper-square/: index.html
xtask/: Cargo.toml
xtask/src/: lib.rs
(+5 files in other folders)
