[workspace]
members = ["games/snake", "games/arrow-blocks", "games/game2048", "lib/minesweeper", "games/minesweeper-square", "games/minesweeper-hex", "lib/cards", "games/klondike", "games/spider", "lib/screenshot", "lib/control", "lib/beam_solver", "xtask"]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
